crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__fs_list.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
snapshot_kind: text
---
{
  "name": "fs_list",
  "description": "Request to list files and directories within the specified directory. If recursive is true, it will list all files and directories recursively. If recursive is false or not provided, it will only list the top-level contents. Do not use this tool to confirm the existence of files you may have created, as the user will let you know if the files were created successfully or not. Parameters: - path: (required) The path of the directory to list contents for (relative   to the current working directory /Users/test) - recursive: (optional) Whether to list files recursively. Use true for   recursive listing, false or omit for top-level only.",
  "input_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSListInput",
    "type": "object",
    "required": [
      "path"
    ],
    "properties": {
      "path": {
        "description": "The path of the directory to list contents for (relative to the current working directory /Users/test)",
        "type": "string"
      },
      "recursive": {
        "description": "Whether to list files recursively. Use true for recursive listing, false or omit for top-level only.",
        "type": [
          "boolean",
          "null"
        ]
      }
    }
  },
  "output_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "Array_of_String",
    "type": "array",
    "items": {
      "type": "string"
    }
  }
}
