crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__fs_replace.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
snapshot_kind: text
---
{
  "name": "fs_replace",
  "description": "Replace sections in a file using SEARCH/REPLACE blocks for precise modifications. ## Parameters - `path`: File path relative to /Users/test - `diff`: SEARCH/REPLACE blocks defining changes ## Format <<<<<<< SEARCH [exact content to find] ======= [new content to replace with] >>>>>>> REPLACE ## Rules 1. SEARCH must match exactly (whitespace, indentation, line endings) 2. Each block replaces first match only 3. Keep blocks minimal - include only changing lines plus needed context 4. Complete lines only - no truncation 5. For moves: use 2 blocks (delete + insert) 6. For deletes: use empty REPLACE section ## Example <<<<<<< SEARCH def old_function(x):     return x + 1 ======= def new_function(x, y=0):     return x + y >>>>>>> REPLACE",
  "input_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSReplaceInput",
    "type": "object",
    "required": [
      "diff",
      "path"
    ],
    "properties": {
      "diff": {
        "type": "string"
      },
      "path": {
        "type": "string"
      }
    }
  },
  "output_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSReplaceOutput",
    "type": "object",
    "required": [
      "content",
      "path"
    ],
    "properties": {
      "content": {
        "type": "string"
      },
      "path": {
        "type": "string"
      }
    }
  }
}
