crates/forge_tool/src/snapshots/forge_tool__tool_engine__test__fs_search.snap
---
source: crates/forge_tool/src/tool_engine.rs
expression: tool_str
snapshot_kind: text
---
{
  "name": "fs_search",
  "description": "Request to perform a regex search across files in a specified directory, providing context-rich results. This tool searches for patterns or specific content across multiple files, displaying each match with encapsulating context. Parameters: - path: (required) The path of the directory to search in (relative to the   current working directory /Users/test). This directory will be recursively   searched. - regex: (required) The regular expression pattern to search for. Uses Rust   regex syntax. - file_pattern: (optional) Glob pattern to filter files (e.g., \\'*.ts\\' for   TypeScript files). If not provided, it will search all files (*).",
  "input_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "FSSearchInput",
    "type": "object",
    "required": [
      "path",
      "regex"
    ],
    "properties": {
      "file_pattern": {
        "description": "Glob pattern to filter files (e.g., '*.ts' for TypeScript files). If not provided, it will search all files (*).",
        "type": [
          "string",
          "null"
        ]
      },
      "path": {
        "description": "The path of the directory to search in (relative to the current working directory /Users/test). This directory will be recursively searched.",
        "type": "string"
      },
      "regex": {
        "description": "The regular expression pattern to search for. Uses Rust regex syntax.",
        "type": "string"
      }
    }
  },
  "output_schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "title": "Array_of_String",
    "type": "array",
    "items": {
      "type": "string"
    }
  }
}
